# blog-CRUD-eldor

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
api/: urls.py
api/v1/: urls.py
api/v1/image/: serializers.py  views.py
api/v2/: urls.py
api/v2/image/: image_processing.py  views.py
api/v3/: urls.py
api/v3/image/: views.py
blog_api/: settings.py  urls.py
chat/: consumers.py  urls.py
chat/templates/chat/: room.html
composeexample/: settings.py
image/: admin.py  models.py
image/migrations/: 0001_initial.py  0002_auto_20201119_1423.py  0003_auto_20201119_1424.py  0004_auto_20201119_1425.py  0005_auto_20201119_1427.py  0006_auto_20201119_1436.py  0007_auto_20201119_1437.py  0008_auto_20201119_1519.py  0009_auto_20201119_1533.py
image_proxy/: asgi.py  settings.py  urls.py  wsgi.py
image_roxy/: manage.py  pyproject.toml  settings.py  wsgi.py
image_roxy/image_roxy/: asgi.py  settings.py  urls.py
image_roxy/tests/: test_image_roxy.py
post/: models.py  permissions.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_commentary.py  0003_auto_20201117_1213.py
tests/: test_basic.py
webchat/: asgi.py  settings.py  urls.py  wsgi.py
