[tool.poetry]
name = "basic"
version = "0.1.0"
description = ""
authors = ["Amir Mullagaliev <amirmullagaliev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
