[tool.poetry]
name = "docker-compose-attempt"
version = "0.1.0"
description = ""
authors = ["Amir Mullagaliev <amirmullagaliev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
psycopg2-binary = "^2.8"
channels = "^3.0.2"
channels_redis = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"